# OGeoflow

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  mergeoutput.py  out.txt
cmake/: cmake_sphinx.cmake  compiler_option.cmake  configurator.cmake  googletest.cmake  rapidjson.cmake  testing.cmake
documentation/: CMakeLists.txt
documentation/diagram/: bool.dot  endarray.dot  endobject.dot  int_double.dot  key.dot  legendary.dot  null.dot  sax_parser.drawio  simple_class.dot  startarray.dot  startobject.dot  string.dot  usr_full_class.dot
documentation/image/: SFA_LICENSE.txt
documentation/source/: conf.py  config.py  index.rst
documentation/source/architecture/: guidelines.rst  guidlines.rst  overview.rst
documentation/source/cplusplus/configuration/: dcel.rst
documentation/source/cplusplus/dcel/: builder.rst  dcel.rst  exporter.rst  feature_info.rst  index.rst  structure.rst
documentation/source/cplusplus/filter/: feature.rst  id_filtering.rst  index.rst  property_filtering.rst
documentation/source/cplusplus/geojson/: decoration.rst  geojson.rst  geometries.rst  index.rst  object.rst
documentation/source/cplusplus/io/: feature_parser.rst  full_parser.rst  index.rst  sax_parser.rst  writer.rst
documentation/source/cplusplus/utils/: index.rst
documentation/source/getting_started/: index.rst
documentation/source/javascript/filter/: index.rst
documentation/source/javascript/geojson/: index.rst
documentation/source/python/: dcel.rst  geojson.rst  io.rst
documentation/source/python/filter/: index.rst
documentation/source/python/io/: index.rst
exemple/display_dcel/: main.py  test.json
exemple/load_geojson/: main.py
include/: locals.h  locals.h.in
include/configuration/: dcel.h  dcel_adapter.h
include/dcel/: builder.h  builder.hpp  constant.h  dcel.h  dcel_builder.h  exception.h  exporter.h  exporter.hpp  face.h  feature_info.h  half_edge.h  storage.h  storage.hpp  storage_builder_helper.h  vertex.h
include/filter/: feature.h  feature.hpp
include/geojson/: bbox.h  exception.h  feature.h  geojson.h  geometry.h  json_value.h  position.h  properties.h  root.h
include/geojson/geometry/: geometry_collection.h  line_string.h  multi_line_string.h  multi_point.h  multi_polygone.h  point.h  polygone.h
include/geojson/geometry_type/: geometry_collection.h  line_string.h  multi_line_string.h  multi_point.h  multi_polygon.h  point.h  polygon.h
include/geojson/object/: feature.h  feature_collection.h  geometry.h
include/io/: error.h  exception.h  feature_parser.h  feature_parser.hpp  full_parser.h  parser.h  sax_handler.h  sax_parser.h  sax_parser.hpp  writer.h
include/pybind/: dcel.h  geojson.h  io.h  main.h
include/utils/: bounded_array.h  exception.h  expected.h
prototype/: algo.py  config.json  config.json.tpl  main.py  test.py
prototype/orientation/: configuration.py  contraction.py
prototype/topology/: __init__.py  line.py  line_segment.py  line_string.py  multipolygon.py  point.py  polygon.py  polygon_registered.py  ring.py  topology.py  vector2D.py
prototype/utils/: __init__.py  config.py  filter.py  logger.py
src/configuration/: CMakeLists.txt  dcel_adapter.cpp
src/configuration/test/: CmakeLists.txt  dcel.json  valid_test_build.cpp  valid_test_write.cpp
src/dcel/: CMakeLists.txt  builder.cpp  dcel_builder.cpp  exporter.cpp  storage.cpp  storage_builder_helper.cpp
src/dcel/test/: CMakeLists.txt  dcel_builder_test.cpp  dcel_builder_test.h  dcel_exporter_test.cpp  dcel_exporter_test.h  dcel_helper.cpp  dcel_helper.h  dcel_merge_test.cpp  dcel_read.cpp  dcel_read_test.cpp  dcel_test.cpp  dcel_test.h  hole_exemple.h  multi_polygon_exemple.h  overflow_test.cpp  proximity_test.cpp  reverse_exemple.h  simple_exemple.h
src/dcel/test/dcel_exemple/: multi_polygon_exemple.h  simple_exemple.h
src/dcel/test/merge_exemple/: aligned_exemple.h  aligned_reverse_exemple.h  common.h  last_vertex_exemple.h  x_exemple.h
src/dcel/test/proximity_exemple/: simple_exemple.h
src/filter/test/: CMakeLists.txt  filter_test.cpp  filter_test.h
src/geojson/: CMakeLists.txt  json_value.cpp  position.cpp
src/io/: CMakeLists.txt  full_parser.cpp  parser.cpp  sax_handler.cpp  writer.cpp
src/io/test/: CMakeLists.txt  coordination_validation_test.cpp  coordination_validation_test.h  feature_test.cpp  feature_test.h  foreign_test.cpp  foreign_test.h  geometry_collection_test.cpp  geometry_collection_test.h  level1_coordinate_test.cpp  level1_coordinate_test.h  level2_coordinate_test.cpp  level2_coordinate_test.h  level3_coordinate_test.cpp  level3_coordinate_test.h  level4_coordinate_test.cpp  level4_coordinate_test.h  line_string_geometry_test.cpp  line_string_geometry_test.h  parser_helper_test.h  parser_test.cpp  parser_test.h  point_geometry_test.cpp  point_geometry_test.h  property_test.cpp  property_test.h  property_value_test.cpp  property_value_test.h  root_test.cpp  root_test.h  writer_test.cpp  writer_test.h
src/pybind/: CMakeLists.txt  dcel.cpp  geojson.cpp  io.cpp  main.cpp
